// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: AssignTrackingDomain form should have button disabled when form is pristine 1`] = `
<SendingDomainSection
  title="Select a Tracking Domain"
>
  <Left>
    <SubduedText
      as="p"
      color="gray.600"
      fontSize="300"
      mt="300"
    >
      <span>
        Link to a tracking domain to track opens, clicks, and unsubscribes.
      </span>
      <br />
      <PageLink
        to="/account/tracking-domains/create"
      >
        Create a tracking domain.
      </PageLink>
    </SubduedText>
  </Left>
  <Right>
    <Panel>
      <form>
        <Panel.Section>
          <Field
            component={[Function]}
            disabled={false}
            helpText="Domains must be verified to be linked to a sending domain."
            label="Linked Tracking Domain"
            name="trackingDomain"
            options={
              Array [
                Object {
                  "label": "track.me",
                  "value": "track",
                },
                Object {
                  "label": "dont.track.me",
                  "value": "dont-track",
                },
              ]
            }
          />
        </Panel.Section>
        <Panel.Section>
          <Button
            disabled={true}
            submit={true}
            variant="primary"
          >
            Update Tracking Domain
          </Button>
        </Panel.Section>
      </form>
    </Panel>
  </Right>
</SendingDomainSection>
`;

exports[`Component: AssignTrackingDomain form should have button disabled when submitting 1`] = `
<SendingDomainSection
  title="Select a Tracking Domain"
>
  <Left>
    <SubduedText
      as="p"
      color="gray.600"
      fontSize="300"
      mt="300"
    >
      <span>
        Link to a tracking domain to track opens, clicks, and unsubscribes.
      </span>
      <br />
      <PageLink
        to="/account/tracking-domains/create"
      >
        Create a tracking domain.
      </PageLink>
    </SubduedText>
  </Left>
  <Right>
    <Panel>
      <form>
        <Panel.Section>
          <Field
            component={[Function]}
            disabled={true}
            helpText="Domains must be verified to be linked to a sending domain."
            label="Linked Tracking Domain"
            name="trackingDomain"
            options={
              Array [
                Object {
                  "label": "track.me",
                  "value": "track",
                },
                Object {
                  "label": "dont.track.me",
                  "value": "dont-track",
                },
              ]
            }
          />
        </Panel.Section>
        <Panel.Section>
          <Button
            disabled={true}
            submit={true}
            variant="primary"
          >
            Updating...
          </Button>
        </Panel.Section>
      </form>
    </Panel>
  </Right>
</SendingDomainSection>
`;

exports[`Component: AssignTrackingDomain form should render form with initial values 1`] = `
<SendingDomainSection
  title="Select a Tracking Domain"
>
  <Left>
    <SubduedText
      as="p"
      color="gray.600"
      fontSize="300"
      mt="300"
    >
      <span>
        Link to a tracking domain to track opens, clicks, and unsubscribes.
      </span>
      <br />
      <PageLink
        to="/account/tracking-domains/create"
      >
        Create a tracking domain.
      </PageLink>
    </SubduedText>
  </Left>
  <Right>
    <Panel>
      <form>
        <Panel.Section>
          <Field
            component={[Function]}
            disabled={false}
            helpText="Domains must be verified to be linked to a sending domain."
            label="Linked Tracking Domain"
            name="trackingDomain"
            options={
              Array [
                Object {
                  "label": "track.me",
                  "value": "track",
                },
                Object {
                  "label": "dont.track.me",
                  "value": "dont-track",
                },
              ]
            }
          />
        </Panel.Section>
        <Panel.Section>
          <Button
            disabled={false}
            submit={true}
            variant="primary"
          >
            Update Tracking Domain
          </Button>
        </Panel.Section>
      </form>
    </Panel>
  </Right>
</SendingDomainSection>
`;

exports[`Component: AssignTrackingDomain form should render panel loading component when data is loading 1`] = `
<SendingDomainSection
  title="Select a Tracking Domain"
>
  <Left>
    <SubduedText
      as="p"
      color="gray.600"
      fontSize="300"
      mt="300"
    >
      <span>
        Link to a tracking domain to track opens, clicks, and unsubscribes.
      </span>
      <br />
      <PageLink
        to="/account/tracking-domains/create"
      >
        Create a tracking domain.
      </PageLink>
    </SubduedText>
  </Left>
  <Right>
    <PanelLoading
      accent={false}
      minHeight="400px"
    />
  </Right>
</SendingDomainSection>
`;
